--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "mkdirp": "^1.0.3",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
