--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^1.0.3",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
