--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "init:dirs": "mkdirp src/sass src/css src/images src/js",
     "init:files": "touch README.md src/index.html src/sass/style.scss src/js/index.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open"
+    "dev": "webpack-dev-server  --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -41,9 +40,11 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "regenerator-runtime": "^0.13.3"
   }
