--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "init:dirs": "mkdirp src/sass src/css src/images src/js",
     "init:files": "touch README.md src/index.html src/sass/style.scss src/js/index.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "dev": "webpack-dev-server  --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js"
+    "dev": "webpack-dev-server --config webpack.config.js --open",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
@@ -44,6 +45,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "regenerator-runtime": "^0.13.3"
