--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
     "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
