Add recipe view

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
+    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.3"
   }
 }
