--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "fractional": "^1.0.0",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "uniqid": "^5.2.0"
   }
 }
